"""
Welcome to Maliput Malidrive!
"""

module(
    name = "maliput_malidrive",
    compatibility_level = 1,
    version = "0.1.4",
)

bazel_dep(name = "rules_cc", version = "0.0.8")
bazel_dep(name = "maliput", version = "1.1.1")
bazel_dep(name = "tinyxml2", version = "9.0.0")

# bazel_dep(name = "fmt", version = "10.1.0", dev_dependency = True)
bazel_dep(name = "googletest", version = "1.14.0", dev_dependency = True)
